[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "msw"
version = "1.1"
description = "some project"
authors = ["Myself <test@example.org>"]
classifiers = ["Private :: Do Not Upload"]

[tool.poetry.dependencies]
python = ">=3.10"
idna = "==3.1"
boto3 = "^1.34.109"
